Complete partition folders

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,217 +1,15 @@
-/*
-COLORS:
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
+@import "abstracts/extends";
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+@import "base/base";
+@import "base/animation";
+@import "base/typography";
+@import "base/ultilities";
 
-*/
+@import "components/button";
 
-$color-primary: #7ed56f;
-$color-primary-light: #55c57a;
-$color-primary-dark: #28b485;
+@import "layouts/header";
 
-$color-grey-dark: #777;
-
-$color-white: #eee;
-$color-dark: #000;
-
-@mixin style-header-text($in--font-size, $in--letter-spacing) {    
-    letter-spacing: $in--letter-spacing;
-    font-size: $in--font-size;    
-    color: $color-white;
-    text-align: center;
-    text-transform: uppercase;
-    display: block;        
-}
-
-%btn:link,
-%btn:visited{    
-    border-radius: 5rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    text-align: center;
-    padding: 2rem 3rem;
-}
-
-*,
-*::after,
-*::before {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 62.5%; // 10px * 100% / 16px
-}
-
-body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    padding: 3rem;
-    color: $color-white;    
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.header { 
-    height: 95vh;    
-    background-image: linear-gradient(
-        to bottom right, 
-        rgba($color-primary, 0.8), 
-        rgba($color-primary-dark, 0.8)),
-        url(../img/hero.jpg);    
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
-}
-
-.header__logo-box {
-    position: absolute;    
-    padding: 1.5rem;    
-
-    .header__logo {
-        height: 4rem;
-        width: 7rem;
-    }
-}
-
-.header__text-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-60%, -65%);
-
-    .header-primary { 
-        margin-bottom: 5rem; 
-    
-        .header-primary--main { 
-            @include style-header-text(6rem, 2.5rem);             
-            margin-bottom: 1rem;
-            animation: moveInLeft 1.5s;            
-        }
-    
-        .header-primary--sub {
-            @include style-header-text(2rem, 1rem); 
-            word-spacing: 2rem;             
-            animation: moveInRight 1.5s;            
-        }
-    }        
-}
-
-.btn--white {color: $color-grey-dark; background-color: $color-white;}
-.btn--dark {color: $color-dark; background-color: $color-white;}
-
-.header__btn {    
-    @extend %btn;
-    position: relative;
-    z-index: 0;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-    display: inline-block;                        
-    font-size: 1.5rem;
-    word-spacing: .5rem;       
-    transition: .35s;    
-            
-    &:hover { transform: translate(-50%, -.5rem) }    
-    &:active { transform: translate(-50%, .7rem) }
-
-    &::after {
-        @extend %btn;
-        content: "";        
-        position: absolute;
-        z-index: 2;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;                                
-        background-color: inherit;
-        opacity: 0;
-    }
-
-    &:hover::after { animation: faded 1s }
-}
-
-.header__btn--animated { animation: moveInBottom 1.5s ease-in}
-
-@mixin moveInAnimation($xPos, $yPos, $status) {
-    transform: translate($xPos, $yPos);
-    opacity: $status;
-}
-
-@mixin fadedAnimation($times, $status) {
-    transform: scale($times);
-    opacity: $status;
-}
-
-@keyframes moveInBottom {
-    0% { @include moveInAnimation(-50%, 5rem , 0) }
-    60% { @include moveInAnimation(-50%, -1rem , .5) }
-    100% { @include moveInAnimation(-50%, 0rem , 1) }
-}
-
-@-webkit-keyframes moveInBottom {
-    0% { @include moveInAnimation(-50%, 5rem , 0) }
-    60% { @include moveInAnimation(-50%, -1rem , .5) }
-    100% { @include moveInAnimation(-50%, 0rem , 1) }
-}
-
-@-moz-keyframes moveInBottom {
-    0% { @include moveInAnimation(-50%, 5rem , 0) }
-    60% { @include moveInAnimation(-50%, -1rem , .5) }
-    100% { @include moveInAnimation(-50%, 0rem , 1) }
-}
-
-@keyframes moveInLeft {
-    0% { @include moveInAnimation(-10rem, 0, 0) }
-    60% { @include moveInAnimation(1rem, 0, .5) }
-    100% { @include moveInAnimation(0rem, 0, 1) }    
-}
-
-@-webkit-keyframes moveInLeft {
-    0% { @include moveInAnimation(-10rem, 0, 0) }
-    60% { @include moveInAnimation(1rem, 0, .5) }
-    100% { @include moveInAnimation(0rem, 0, 1) }    
-}
-
-@-moz-keyframes moveInLeft {
-    0% { @include moveInAnimation(-10rem, 0, 0) }
-    60% { @include moveInAnimation(1rem, 0, .5) }
-    100% { @include moveInAnimation(0rem, 0, 1) }    
-}
-
-@keyframes moveInRight {
-    0% { @include moveInAnimation(10rem, 0, 0) }
-    60% { @include moveInAnimation(-1rem, 0, .5) }
-    100% { @include moveInAnimation(0rem, 0, 1) }    
-}
-
-@-webkit-keyframes moveInRight {
-    0% { @include moveInAnimation(10rem, 0, 0) }
-    60% { @include moveInAnimation(-1rem, 0, .5) }
-    100% { @include moveInAnimation(0rem, 0, 1) }    
-}
-
-@-moz-keyframes moveInRight {
-    0% { @include moveInAnimation(10rem, 0, 0) }
-    60% { @include moveInAnimation(-1rem, 0, .5) }
-    100% { @include moveInAnimation(0rem, 0, 1) }    
-}
-
-@keyframes faded {
-    0% { @include fadedAnimation(1, 1) }    
-    100% { @include fadedAnimation(2, 0) }        
-}
-
-@-webkit-keyframes faded {
-    0% { @include fadedAnimation(1, 1) }    
-    100% { @include fadedAnimation(2, 0) }        
-}
-
-@-moz-keyframes faded {
-    0% { @include fadedAnimation(1, 1) }    
-    100% { @include fadedAnimation(2, 0) }        
-}
+@import "pages/home";
