--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,7 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-.header__btn:link, .header__btn:link::after,
-.header__btn:visited,
-.header__btn:visited::after {
+.btn:link, .btn:visited, .btn::after {
   border-radius: 5rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -32,85 +30,6 @@ body {
   color: #eee;
   box-sizing: border-box;
   overflow: hidden; }
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%); }
-
-.header__logo-box {
-  position: absolute;
-  padding: 1.5rem; }
-  .header__logo-box .header__logo {
-    height: 4rem;
-    width: 7rem; }
-
-.header__text-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-60%, -65%); }
-  .header__text-box .header-primary {
-    margin-bottom: 5rem; }
-    .header__text-box .header-primary .header-primary--main {
-      letter-spacing: 2.5rem;
-      font-size: 6rem;
-      color: #eee;
-      text-align: center;
-      text-transform: uppercase;
-      display: block;
-      margin-bottom: 1rem;
-      animation: moveInLeft 1.5s; }
-    .header__text-box .header-primary .header-primary--sub {
-      letter-spacing: 1rem;
-      font-size: 2rem;
-      color: #eee;
-      text-align: center;
-      text-transform: uppercase;
-      display: block;
-      word-spacing: 2rem;
-      animation: moveInRight 1.5s; }
-
-.btn--white {
-  color: #777;
-  background-color: #eee; }
-
-.btn--dark {
-  color: #000;
-  background-color: #eee; }
-
-.header__btn {
-  position: relative;
-  z-index: 0;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
-  display: inline-block;
-  font-size: 1.5rem;
-  word-spacing: .5rem;
-  transition: .35s; }
-  .header__btn:hover {
-    transform: translate(-50%, -0.5rem); }
-  .header__btn:active {
-    transform: translate(-50%, 0.7rem); }
-  .header__btn::after {
-    content: "";
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: inherit;
-    opacity: 0; }
-  .header__btn:hover::after {
-    animation: faded 1s; }
-
-.header__btn--animated {
-  animation: moveInBottom 1.5s ease-in; }
 
 @keyframes moveInBottom {
   0% {
@@ -234,3 +153,78 @@ body {
   100% {
     transform: scale(2);
     opacity: 0; } }
+
+.header__text-box .header-primary {
+  margin-bottom: 3.5rem; }
+  .header__text-box .header-primary--main {
+    letter-spacing: 3rem;
+    font-size: 6rem;
+    color: #eee;
+    text-align: center;
+    text-transform: uppercase;
+    display: block;
+    animation: moveInLeft 1.5s;
+    line-height: 2; }
+  .header__text-box .header-primary--sub {
+    letter-spacing: 1rem;
+    font-size: 2rem;
+    color: #eee;
+    text-align: center;
+    text-transform: uppercase;
+    display: block;
+    word-spacing: 2rem;
+    animation: moveInRight 1.5s; }
+
+.btn {
+  position: relative;
+  z-index: 0;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: inline-block;
+  font-size: 1.5rem;
+  word-spacing: .5rem;
+  transition: .35s; }
+  .btn::after {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: inherit;
+    opacity: 0; }
+  .btn:hover {
+    transform: translate(-50%, -1.5rem); }
+    .btn:hover::after {
+      animation: faded 1s; }
+  .btn:active {
+    transform: translate(-50%, 0.7rem); }
+  .btn--animated {
+    animation: moveInBottom 1.5s ease-in; }
+  .btn--white {
+    color: #777;
+    background-color: #eee; }
+  .btn--dark {
+    color: #000;
+    background-color: #eee; }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%); }
+  .header__logo-box {
+    position: absolute;
+    padding: 1.5rem; }
+  .header__logo {
+    height: 4rem;
+    width: 7rem; }
+  .header__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-40%, -65%); }
