--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
 .btn:link, .btn:visited, .btn::after {
   border-radius: 5rem;
   text-transform: uppercase;
@@ -16,9 +8,9 @@ Dark green: #28b485
 *,
 *::after,
 *::before {
-  padding: 0;
   margin: 0;
-  box-sizing: border-box; }
+  padding: 0;
+  box-sizing: inherit; }
 
 html {
   font-size: 62.5%; }
@@ -28,8 +20,7 @@ body {
   font-weight: 400;
   padding: 3rem;
   color: #eee;
-  box-sizing: border-box;
-  overflow: hidden; }
+  box-sizing: border-box; }
 
 @keyframes moveInBottom {
   0% {
@@ -216,7 +207,7 @@ body {
   background-size: cover;
   background-position: top;
   position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%); }
   .header__logo-box {
     position: absolute;
     padding: 1.5rem; }
@@ -225,6 +216,56 @@ body {
     width: 7rem; }
   .header__text-box {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
-    transform: translate(-40%, -65%); }
+    transform: translate(-50%, -65%); }
+
+.row {
+  max-width: 114rem;
+  font-size: 16px;
+  color: #ffffff;
+  margin: 0 auto; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^=col-] {
+    background-color: #000000;
+    height: 4rem;
+    text-align: center;
+    line-height: 4rem;
+    float: left; }
+  .row:not(:last-child) {
+    margin-bottom: 4rem; }
+  .row .col-1 {
+    width: calc( (100% - 1 *  3rem) / 2);
+    background-color: orangered; }
+    .row .col-1:not(:last-child) {
+      margin-right: 3rem; }
+  .row .col-2 {
+    width: calc( (100% - 2 * 3rem) / 3);
+    background-color: lightcoral; }
+    .row .col-2:not(:last-child) {
+      margin-right: 3rem; }
+  .row .col-3 {
+    width: calc( (100% - 1 * 3rem) / 2);
+    background-color: lightblue; }
+    .row .col-3:not(:last-child) {
+      margin-right: 3rem; }
+  .row .col-4 {
+    width: calc( (100% - 3 * 3rem) / 4);
+    background-color: lightgreen; }
+    .row .col-4:not(:last-child) {
+      margin-right: 3rem; }
+  .row .col-5 {
+    width: calc( (100% - 2 * 3rem) / 3);
+    background-color: lightseagreen; }
+    .row .col-5:not(:last-child) {
+      margin-right: 3rem; }
+  .row .col-6 {
+    width: calc( (100% - 2 * 3rem) / 3);
+    background-color: lightsteelblue; }
+    .row .col-6:not(:last-child) {
+      margin-right: 3rem; }
+    .row .col-6:last-child {
+      width: calc( (2*(100% - 2 * 3rem) / 3) + 3rem); }
