--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,17 +1,13 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-
+// COLORS:
 $color-primary: #7ed56f;
 $color-primary-light: #55c57a;
 $color-primary-dark: #28b485;
-
 $color-grey-dark: #777;
-
 $color-white: #eee;
 $color-dark: #000;
+
+
+// GRID
+$grid-width: 114rem;
+$gutter-vertical: 4rem;
+$gutter-horizontal: 3rem;
