--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,13 +1,14 @@
 *,
 *::after,
 *::before {
-    padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    padding: 0;
+    box-sizing: inherit;
 }
 
 html {
-    font-size: 62.5%; // 10px * 100% / 16px
+    // This defines what 1rem is
+    font-size: 62.5%;
 }
 
 body {
@@ -15,6 +16,5 @@ body {
     font-weight: 400;
     padding: 3rem;
     color: $color-white;    
-    box-sizing: border-box;
-    overflow: hidden;
+    box-sizing: border-box;        
 }
