--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -7,8 +7,8 @@
         url(../img/hero.jpg);    
     background-size: cover;
     background-position: top;
-    position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);    
+    position: relative;    
+    clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);    
 
     &__logo-box {
         position: absolute;    
@@ -22,8 +22,8 @@
 
     &__text-box {
         position: absolute;
-        top: 50%;
+        top: 40%;
         left: 50%;
-        transform: translate(-40%, -65%);
+        transform: translate(-50%, -65%);
     }    
 }
