--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,9 @@
 
 @import "components/button";
 
-@import "layouts/header";
 @import "layouts/grid";
+@import "layouts/header";
+@import "layouts/main";
+
 
 @import "pages/home";
