--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,15 +6,12 @@
     box-sizing: inherit;
 }
 
-html {
-    // This defines what 1rem is
-    font-size: 62.5%;
-}
+html { font-size: 62.5% } // This defines what 1rem is
 
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    padding: 3rem;
-    color: $color-white;    
-    box-sizing: border-box;        
+    // font-family: "Lato", sans-serif;
+    // font-weight: 400;    
+    // color: $color-white;    
+    box-sizing: border-box;
+    padding: 3rem; 
 }
