--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,9 @@
+body {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;    
+    color: $color-white;        
+}
+
 .header__text-box {    
     .header-primary { 
         margin-bottom: 3.5rem; 
