--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,6 +7,15 @@ $color-grey-light: #f7f7f7;
 $color-white: #eee;
 $color-dark: #000;
 
+// FONT SIZE
+$font-size-s: 1.2rem;
+$font-size-m: 1.6rem;
+$font-size-l: 2rem;
+$font-size-xl: 2.6rem;
+$font-size-xxl: 3.6rem;
+$font-size-xxxl: 4.6rem;
+$font-size-xxxxl: 5.6rem;
+
 
 // GRID
 $grid-width: 114rem;
