--- a/sass/base/_ultilities.scss
+++ b/sass/base/_ultilities.scss
@@ -1,11 +1,28 @@
 .u-center-text {text-align: center;}
 
-.u-mt-s {margin-top: 2rem;}
-.u-mt-m {margin-top: 5rem;}
-.u-mt-l {margin-top: 10rem;}
-.u-mt-xl {margin-top: 12.5rem;}
+// PADDING
+.u-pt-xs {padding-top: 1rem}
+.u-pt-s {padding-top: 2.5rem}
+.u-pt-m {padding-top: 5rem}
+.u-pt-l {padding-top: 10rem}
+.u-pt-xl {padding-top: 16rem}
 
-.u-mb-s {margin-bottom: 2rem;}
-.u-mb-m {margin-bottom: 5rem;}
-.u-mb-l {margin-bottom: 10rem;}
-.u-mb-xl {margin-bottom: 12.5rem;}
+.u-pb-xs {padding-bottom: 1rem}
+.u-pb-s {padding-bottom: 2.5rem}
+.u-pb-m {padding-bottom: 5rem}
+.u-pb-l {padding-bottom: 10rem}
+.u-pb-xl {padding-bottom: 16rem}
+
+
+// MARGIN
+.u-mt-xs {margin-top: 1rem}
+.u-mt-s {margin-top: 2rem}
+.u-mt-m {margin-top: 5rem}
+.u-mt-l {margin-top: 10rem}
+.u-mt-xl {margin-top: 12.5rem}
+
+.u-mb-xs {margin-bottom: 1rem}
+.u-mb-s {margin-bottom: 2rem}
+.u-mb-m {margin-bottom: 5rem}
+.u-mb-l {margin-bottom: 10rem}
+.u-mb-xl {margin-bottom: 12.5rem}
