--- a/sass/layouts/_main.scss
+++ b/sass/layouts/_main.scss
@@ -1,34 +1,22 @@
 .main {
-    background-color: $color-grey-light;
-    margin-top: -25vh;
-    padding-top: 25vh;
+    background-color: $color-grey-light;    
+    margin-top: -25vh;    
+    padding-top: 20rem;
+}
 
-    .section-about {
-        font-size: 1.5rem;
-        @include clearfix;    
-        
-        .header-secondary {
-            display: inline-block;
-            font-weight: 900;
-            font-size: 3.5rem;
-            text-transform: uppercase;
-            color: transparent;                        
-            background-image: linear-gradient(to right, rgba($color-primary, .8), rgba($color-primary-dark, .8));
-            -webkit-background-clip: text;
+.section-about {
+    font-size: $font-size-m;
+    color: $color-grey-dark;
+    @include clearfix;                                    
+}
 
-            &:hover {
-                cursor: default;
-                text-shadow: 0 10px 20px rgba($color-grey-dark, .45);                                                             
-                transform: translateY(-5px) skew(-5deg, 5deg) scale(1.1);
-                transition: .2s;   
-            }            
-        }
-        
-        &__paragraph {
-            color: $color-grey-dark;
-            line-height: 1.8;
-
-            .header-tertiary { text-transform: uppercase }            
-        }
-    }
+.section-features {    
+    height: 95vh;
+    padding: 18rem 0;
+    background-image: linear-gradient(to right bottom,
+    rgba($color-primary-light, .8),
+    rgba($color-primary-dark, .8)),
+    url('/img/nat-1-large.jpg');
+    background-position: top;
+    background-size: cover;       
 }
