--- a/sass/abstracts/_extends.scss
+++ b/sass/abstracts/_extends.scss
@@ -1,7 +1,15 @@
-%btn {    
-    border-radius: 5rem;
+%btn {        
     text-transform: uppercase;
     text-decoration: none;
     text-align: center;
     padding: 2rem 3rem;
+    border-radius: 5rem;
+    outline: none;    
+}
+
+
+%btn-text {    
+    text-decoration: none;
+    font-size: $font-size-m;    
+    font-weight: 500;    
 }
