--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,8 @@
 @import "base/ultilities";
 
 @import "components/button";
+@import "components/composition";
+@import "components/feature-box";
 
 @import "layouts/grid";
 @import "layouts/header";
