--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ body {
   box-sizing: border-box;
   padding: 3rem; }
 
+ul {
+  list-style-type: none; }
+
 @keyframes moveInBottom {
   0% {
     transform: translate(-50%, 5rem);
@@ -190,7 +193,14 @@ body {
 
 .header-tertiary {
   font-size: 2rem;
-  font-weight: 700; }
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.header-university {
+  font-size: 2.6rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #f7f7f7; }
 
 .paragraph {
   font-size: 1.6rem;
@@ -336,17 +346,83 @@ body {
   font-size: 1.6rem;
   background-color: #f7f7f7;
   border-radius: 5px;
-  padding: 3.5rem 1.4rem 1rem; }
+  padding: 3.5rem 1.4rem 1rem;
+  transition: transform .2s;
+  cursor: default; }
   .feature-box > * {
     margin-bottom: 2.5rem; }
-  .feature-box h3 {
-    text-transform: uppercase; }
+  .feature-box__icon {
+    font-size: 4.6rem;
+    background: linear-gradient(to right, rgba(85, 197, 122, 0.9), rgba(40, 180, 133, 0.9));
+    -webkit-background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: scale(1.05) translateY(-1rem); }
 
-.icon {
-  font-size: 4.6rem;
-  background: linear-gradient(to right, rgba(85, 197, 122, 0.9), rgba(40, 180, 133, 0.9));
-  -webkit-background-clip: text;
-  color: transparent; }
+.tour-card {
+  position: relative;
+  font-size: 1.6rem;
+  transition: transform 1s;
+  height: 45rem;
+  border-radius: 5px;
+  perspective: 100rem;
+  -webkit-perspective: 100rem; }
+  .tour-card__side {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    transition: all .85s ease; }
+    .tour-card__side--front {
+      color: #777; }
+    .tour-card__side--back {
+      transform: rotateY(180deg); }
+      .tour-card__side--back-1 {
+        background-image: linear-gradient(to right, rgba(255, 182, 120, 0.85), rgba(238, 133, 42, 0.85)); }
+      .tour-card__side--back-3 {
+        background-image: linear-gradient(to right, rgba(85, 197, 122, 0.85), rgba(40, 180, 133, 0.85)); }
+      .tour-card__side--back-3 {
+        background-image: linear-gradient(to right, rgba(127, 211, 245, 0.85), rgba(39, 175, 230, 0.85)); }
+  .tour-card:hover .tour-card__side--front {
+    transform: rotateY(-180deg); }
+  .tour-card:hover .tour-card__side--back {
+    transform: rotateY(0deg); }
+
+.card__img {
+  position: relative;
+  width: 100%;
+  height: 45%;
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+  .card__img-1 {
+    background-image: linear-gradient(to right bottom, rgba(255, 182, 120, 0.45), rgba(238, 133, 42, 0.8)), url("/img/nat-5.jpg"); }
+
+.card__header-tour {
+  position: absolute;
+  right: 5px;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+  padding: 1rem 1.8rem;
+  background-image: linear-gradient(to right, rgba(255, 182, 120, 0.95), rgba(238, 133, 42, 0.95)); }
+  .card__header-tour:first-child {
+    bottom: 30%; }
+  .card__header-tour:last-child {
+    bottom: 10%; }
+
+.card__list {
+  width: 80%;
+  margin: 0 auto;
+  padding: 2rem 0 1rem;
+  text-align: center; }
+  .card__list li {
+    padding: 1.05rem 0; }
+    .card__list li:not(:last-child) {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.25); }
 
 .row {
   max-width: 114rem;
@@ -399,12 +475,10 @@ body {
     left: 50%;
     transform: translate(-50%, -65%); }
 
-.main {
-  background-color: #f7f7f7;
-  margin-top: -25vh;
-  padding-top: 20rem; }
-
 .section-about {
+  margin-top: -25vh;
+  padding: 20rem 0;
+  background-color: #f7f7f7;
   font-size: 1.6rem;
   color: #777; }
   .section-about::after {
@@ -413,8 +487,18 @@ body {
     clear: both; }
 
 .section-features {
-  height: 95vh;
+  transform: skewY(-7deg);
+  margin-top: -10rem;
   padding: 18rem 0;
   background-image: linear-gradient(to right bottom, rgba(85, 197, 122, 0.8), rgba(40, 180, 133, 0.8)), url("/img/nat-1-large.jpg");
   background-position: top;
   background-size: cover; }
+  .section-features > * {
+    transform: skewY(7deg); }
+
+.section-tours {
+  background-color: #f7f7f7;
+  margin-top: -10rem;
+  padding: 25rem 0 20rem;
+  font-size: 2.6rem;
+  color: black; }
