--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -4,18 +4,21 @@
     font-size: $font-size-m;
     background-color: $color-grey-light;    
     border-radius: 5px;                
-    padding: 3.5rem 1.4rem 1rem;
+    padding: 3.5rem 1.4rem 1rem;        
+    transition: transform .2s;
+    cursor: default;
 
-    & > * { margin-bottom: 2.5rem }
+    & > * { margin-bottom: 2.5rem }    
+    
+    &__icon {
+        font-size: $font-size-xxxl;
+        background: linear-gradient(to right,
+        rgba($color-primary-light, .9),
+        rgba($color-primary-dark, .9));
+        -webkit-background-clip: text;
+        color: transparent;
+    }
 
-    h3 { text-transform: uppercase }
+    &:hover { transform: scale(1.05) translateY(-1rem); }
 }
 
-.icon {
-    font-size: $font-size-xxxl;
-    background: linear-gradient(to right,
-    rgba($color-primary-light, .9),
-    rgba($color-primary-dark, .9));
-    -webkit-background-clip: text;
-    color: transparent;
-}
