--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -13,6 +13,9 @@
             outline: 1.2rem solid rgba($color-primary-dark,.8);
             z-index: 2;            
             transform: scale(1.1) translateY(-1rem);                        
+        }
+        &:hover > *:not(:hover){
+            transform: scale(.5);
         }        
 
         &-1 { top: -1rem; left: 10%; }
