--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -57,6 +57,7 @@
     height: 45%;
     background-position: top;
     background-size: cover;
+    background-blend-mode: screen;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
     &-1 {
