--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,8 +3,8 @@ $color-primary: #7ed56f;
 $color-primary-light: #55c57a;
 $color-primary-dark: #28b485;
 
-$color-secondary-light: #ffb678;
-$color-secondary-dark: #ee852a;
+$color-secondary-light: #fcb373;
+$color-secondary-dark: #ee7c19;
 
 $color-tertiary-light: #7fd3f5;
 $color-tertiary-dark: #27afe6;
