--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -36,7 +36,7 @@
     &--animated { animation: moveInBottom 1.5s ease-in}        
     &--white {
         color: $color-grey-dark; 
-        background-color: $color-white 
+        background-color: $color-white; 
     }
     &--dark {
         color: $color-dark; 
